--- a/_sass/minimal-mistakes/_variables.scss
+++ b/_sass/minimal-mistakes/_variables.scss
@@ -120,9 +120,12 @@ $x-large                      : 1280px !default;
    Grid
    ========================================================================== */
 
-$right-sidebar-width-narrow   : 200px !default;
-$right-sidebar-width          : 300px !default;
-$right-sidebar-width-wide     : 400px !default;
+$left-sidebar-width-narrow   : 200px !default;
+$left-sidebar-width          : 200px !default;
+$left-sidebar-width-wide     : 200px !default;
+$right-sidebar-width-narrow   : 1px !default;
+$right-sidebar-width          : 1px !default;
+$right-sidebar-width-wide     : 1px !default;
 
 
 /*
